--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -1,3 +1,4 @@
-.border-color-text {
-    color: rgb(255, 255, 255);
-  }
+.navbar-text {
+  color: rgba(255,255,255,.75) !important;
+  text-decoration: none;
+}
