--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .background-color {
   background-color: #2b2b41;
-  height: 110%;
+  min-height: 100vh;
   color: rgb(255 255 255 / .75);
   padding-bottom: 1%;
 }
