--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -2,3 +2,7 @@
   color: rgba(255,255,255,.75) !important;
   text-decoration: none;
 }
+
+.navbar-search, .navbar-search:focus {
+  background-color: #2b2b41;
+}
