--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -6,6 +6,7 @@
     position: relative;
     overflow: hidden;
     cursor: pointer;
+    width: 15rem;
 }
 
 .movie-over {
@@ -24,20 +25,8 @@
     transform: translateY(0%);
 }
 
-.list-mobile {
-    display: none;
-}
-
-.list-dekstop {
-    display: flex;
-}
-
-@media only screen and (max-width: 519px) {
-    .list-dekstop {
-        display: none;
-    }
-
-    .list-mobile {
-        display: flex;
+@media only screen and (max-width: 537px) {
+    .movie {
+        width: 11rem;
     }
 }
